# vue-monorepo

./: .eslintignore  .eslintrc.cjs  .gitattributes  .gitignore  .prettierignore  .prettierrc  .stylelintrc.js  AGENTS.md  CLAUDE.md  README.md  eslint.config.js  eslint.config.mjs  package.json  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json  uno.config.ts  vite.config.base.ts
.claude/: config.json
.cursor/rules/: vue-monorepo.mdc
.windsurf/rules/: vue-monorepo.md
apps-backend/le-admin-server/: .env.example  alembic.ini  pyproject.toml
apps-backend/le-admin-server/contracts/: .gitkeep
apps-backend/le-admin-server/database/fixtures/: .gitkeep
apps-backend/le-admin-server/database/migrations/: env.py
apps-backend/le-admin-server/database/migrations/versions/: .gitkeep
apps-backend/le-admin-server/database/seeds/: .gitkeep
apps-backend/le-admin-server/src/le_admin_server/: app.py  database.py  main.py
apps-backend/le-admin-server/src/le_admin_server/api/: deps.py
apps-backend/le-admin-server/src/le_admin_server/api/v1/: router.py
apps-backend/le-admin-server/src/le_admin_server/core/: settings.py
apps-backend/le-admin-server/src/le_admin_server/modules/users/: models.py  repositories.py  routes.py  schemas.py  services.py
apps-backend/le-admin-server/tests/api/: test_health.py  test_users.py
apps-web/le-admin/: components.d.ts  package.json  tsconfig.app.json  vite.config.ts
apps-web/le-admin/public/: config.js
apps-web/le-admin/src/: App.vue  vite-env.d.ts
apps-web/le-guide/: package.json  tsconfig.json
apps-web/le-guide/docs/: index.md
apps-web/le-start/: components.d.ts  index.html  package.json  tsconfig.node.json
contracts/openapi/: .gitkeep
contracts/schemas/: .gitkeep
doc/: todo.md  使用注意.md  功能设计.md  目录结构.md  知识点.md  计划.md  设计.md  配置文件说明.md
packages-backend/lee-api-core/: pyproject.toml
packages-backend/lee-api-core/src/lee_api_core/: __init__.py  app.py  exceptions.py  health.py  schemas.py
packages-backend/lee-api-core/tests/: test_exceptions.py  test_schemas.py
packages-backend/lee-auth/: pyproject.toml
packages-backend/lee-auth/src/lee_auth/: __init__.py  bearer.py  tokens.py
packages-backend/lee-auth/tests/: test_bearer.py  test_passwords.py  test_tokens.py
packages-backend/lee-contracts/: pyproject.toml
packages-backend/lee-contracts/src/lee_contracts/: __init__.py  error_codes.py
packages-backend/lee-contracts/tests/: test_error_codes.py
packages-backend/lee-db/: pyproject.toml
packages-backend/lee-db/src/lee_db/: __init__.py  base.py  mixins.py  session.py
packages-backend/lee-db/tests/: test_base.py
packages-web/base/: README.md  package.json  tsconfig.app.json  tsconfig.node.json
packages-web/theme/: README.md  tsconfig.app.json
packages-web/theme/docs/: color-palette.md  dark-mode-guide.md  migration-checklist.md  sidebar-dark-mode.md
packages-web/ui/: package.json
packages-web/utils/: package.json
projects/app/: index.js  package.json
projects/le-admin/: components.d.ts  tsconfig.app.json
projects/le-guide/: tsconfig.json
projects/le-start/: components.d.ts  tsconfig.node.json
projects/vite-vue/: components.d.ts  index.html  tsconfig.app.json  tsconfig.node.json  vite.config.ts
tooling/: .gitkeep
(+146 files in other folders)
