[project]
name = "lee-api-core"
version = "0.1.0"
description = "Shared FastAPI primitives for backend services."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic>=2.10,<3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lee_api_core"]
