[project]
name = "lee-auth"
version = "0.1.0"
description = "Shared authentication and token helpers."
requires-python = ">=3.12"
dependencies = [
  "passlib>=1.7,<2.0",
  "pydantic>=2.10,<3.0",
  "python-jose[cryptography]>=3.3,<4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lee_auth"]
