[project]
name = "lee-db"
version = "0.1.0"
description = "Shared SQLAlchemy async database primitives."
requires-python = ">=3.12"
dependencies = [
  "sqlalchemy[asyncio]>=2.0,<3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lee_db"]
